# tpvalidator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: vd_geo_1x6x8.txt
notebooks/: BacktrackerDebugging.ipynb  BacktrackerDebuggingEl.ipynb  BacktrackerDebuggingMu.ipynb  BasicPlots.ipynb  BkgPlayground.ipynb  Debug.ipynb  DebugVDGeoDisplay.ipynb  Playground.ipynb  TPThresholds_RadioBkg_vs_noise.ipynb
notebooks/archive/: Debug.ipynb  playground_ar39.ipynb  playground_vs_single_eminus.ipynb
notebooks/devel/: BasicPlots.ipynb  Debug.ipynb  DebugHydra-1x8x14.ipynb  DebugVDGeoDisplay.ipynb  DetsimDebug.ipynb  DetsimDebug_1x8x14.ipynb  GeoTPCDisplay.ipynb  Playground.ipynb  SimIdeExplorer.ipynb  Waveforms.ipynb  WireCellSingleTPCValidation.ipynb  Workspace.ipynb
notebooks/marimo/: mo_VDBackgroundMontecarlo_1x8x14.py  mo_ar39_noise_report.py  my_notebook.py
notebooks/marimo/layouts/: mo_VDBackgroundMontecarlo_1x8x14.grid.json  mo_VDBackgroundMontecarlo_1x8x14.slides.json
notebooks/mcprod/: DetsimDebug.ipynb  IdesDebug.ipynb  NoiseRateEstimation.ipynb  TAFinderDev.ipynb  VDBackgroundMontecarlo.ipynb  VDBackgroundRates.ipynb  VDBackgroundRates_legacy.ipynb  ValidateMcMiniProdSignals.ipynb  ValidateMcPreProd.ipynb  ValidateSoATrees.ipynb  WorkspaceDev.ipynb
notebooks/studies/: TAFinderDev.ipynb  TAFinderSearchWindows.ipynb  VD-1x8x14-BackgroundMontecarlo.ipynb  VD-1x8x14-BackgroundTPs.ipynb  VDBackgroundMontecarlo.ipynb  VDBackgroundMontecarlo_1x8x14.ipynb  VDBackgroundMontecarlo_1x8x6.ipynb  VDBackgroundRates_legacy.ipynb  VDValidateExternalBkg.ipynb  ValidateMcMiniProdSignals.ipynb  ValidateMcPreProd.ipynb  ValidateSoATrees.ipynb  WorkspaceDev.ipynb
notebooks/studies/1x8x14/: README.md  VD-1x8x14-BackgroundMontecarlo.ipynb  VD-1x8x14-BackgroundTPs.ipynb  VD-1x8x14-NoiseRateEstimation.ipynb  VD-1x8x14-RadBkgMontecarlo.ipynb  VD-1x8x14-RadiBkgMontecarlo.ipynb  VD-1x8x14-RadiologicalBackgroundMontecarlo.ipynb  VD-1x8x14-RadiologicalBackgroundTriggerPrimitiveRates.ipynb  VD-1x8x14-TABkgRates.ipynb  VD-1x8x14-TASearchWindow.ipynb  VD-1x8x14-TASigEff-Dev.ipynb  VD-1x8x14-TPCalibration-Dev.ipynb  VD-1x8x14-TPCalibration.ipynb  VD-1x8x14-TPFiltering-Dev.ipynb  VD-1x8x14-TPFiltering.ipynb  (+1 more)
notebooks/test/: mo_ar39_noise_report.py  my_notebook.py
scripts/: ar39_noise_report.py  ar39_report.py  radbkg_noise_report.py  tp_thresholds_report.py
src/tpvalidator/: __init__.py  backtracker.py  backtracker2g.py  backtracker_legacy.py  basic.py  datacatalogue.py  dataloader.py  datapool.py  datasetloader.py  detector_geometry.py  detgeometry.py  emulator.py  geometry.py  histograms.py  portfolio.py  rootio.py  tpc_angles.py  utilities.py  utils.py  workspace.py  workspace2g.py
src/tpvalidator/cli/: tafind.py  (+2 more)
test/: 3d_voxel.ipynb  Raleway-VariableFont_wght.pkl  conftest.py  fpfd_example.py  my_test_report.py  plot_absrs_waveform_py.py  test_datasetloader.py  test_dbscan.py  test_detector_geometry.py  test_detgeometry.py  test_df_rebuild_index.py  test_df_writing.py  test_histograms.py  test_ntplereader.py  test_snn_selector.py  test_tpc_angles.py  test_utils.py  test_utilties.py  tests_workspace.py
test/manual/: 3d_voxel.ipynb  dev_cachepool.py  fpdf_example.py  reportlab_example.py  test_angles.py  test_rawwaves_ntplereader.py
(+46 files in other folders)
